--- a/quiz/genres/afrobeat.html
+++ b/quiz/genres/afrobeat.html
@@ -23,6 +23,7 @@
       <li>"Sinnerman" by Nina Simone</li>
       <li>"Summertime" by Ella Fitzgerald</li>
       <li>"My Baby Just Cares For Me - from the Hootenanny 2009" by Jools Holland & Florence Welch</li>
+      <li>"Back To Black" by Amy Winehouse</li>
     </ul>
   </div>
   
